# panther-api

./: .gitignore  Makefile  README.md  example.py  project_plan.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
panther_seim/: __init__.py  _util.py  alerts.py  cloud_accounts.py  data_models.py  databases.py  exceptions.py  globals.py  gql_scalars.py  metrics.py  queries.py  roles.py  rule_test_results.py  rules.py  search.py  sources.py  tokens.py  users.py
panther_seim/gql_templates/alerts/: add_comment.gql  get.gql  list.gql  update_assignee_by_email.gql  update_assignee_by_id.gql  update_status.gql
panther_seim/gql_templates/cloud_accounts/: create.gql  delete.gql  get.gql  list.gql  update.gql
panther_seim/gql_templates/databases/: get.gql  list.gql
panther_seim/gql_templates/metrics/: alerts_by_severity.gql  alerts_count.gql  alerts_per_rule.gql  all.gql  bytes_processed.gql  bytes_processed_log_type.gql  bytes_queried.gql  bytes_queried_log_type.gql  events_processed_log_type.gql  latency_log_type.gql
panther_seim/gql_templates/queries/: results.gql
panther_seim/gql_templates/roles/: create.gql  delete.gql  get_by_id.gql  get_by_name.gql  list.gql  update.gql
panther_seim/gql_templates/search/: execute.gql
panther_seim/gql_templates/sources/: delete.gql  get.gql  (+1 more)
tests/: __init__.py  test_alerts.py  test_cloud.py  test_data_models.py  test_databases.py  test_globals.py  test_gql_files.py  test_gql_scalars.py  test_init.py  test_metrics.py  test_queries.py  test_rules.py  test_search.py  test_sources.py  test_users.py  test_util.py
(+7 files in other folders)
