[tool.poetry]
name = "panther-seim"
version = "0.1.1"
description = ""
authors = ["Ben Airey <benjaminjohnairey@gmail.com>"]
readme = "README.md"
packages = [{include = "panther_seim"}]

[tool.poetry.dependencies]
python = "^3.11"
gql = "^3.4.1"
aiohttp = "^3.9.1"
pytz = "^2023.3.post1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.3"
black = "^23.12.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
